0.09011

    - TT template files changed - update them if you use a local copy.
      Template file 'label_tag' renamed to 'label_element' - old file can
      be deleted.
    
    - Bug fix: param_value() form method now matches documented behaviour -
      returns undef when field has errors. (Reported by Hailin Hu).
    
    - New Element::Email and Element::URL HTML5 input fields.
    
    - Role::Element::Input has new datalist_options(), datalist_values(),
      datalist_id() and auto_datalist_id() methods to support HTML5 datalists.
      auto_datalist_id() is an inherited accessor which can be set on the 
      Form, MultiForm, or Block.
    
    - Form and Elements have new title(), title_xml() and title_loc()
      attribute accessors.
    
    - Constraint::Regex has new anchored() accessor.
    
    - New Input attribute accessors: placeholder(), pattern(), autocomplete().
    
    - New Input boolean attribute accessors: autofocus(), multiple(), required().
    
    - Constraints have new experimental method fetch_error_message().
    
    - New Czech (cs) I18N translation by Jan Grmela.
    
    - mk_inherited_accessors() now also creates a *_no_inherit() method.
    
    - Error message container tags now have a 'for' attribute - for use by
      client side scripts, such as jQuery validation.
    
    - Experimental new roles() form method.
    
    - form methods start(), end() now respect render_method - no longer
      force use of tt templates.
    
    - Element::Number no longer generates `type="number"`, as the output
      was neither valid xhtml or html5.
      http://code.google.com/p/html-formfu/issues/detail?id=66

0.09010 2012-10-05

    - Internal changes - all Repeatable/nested_name munging is moved out of
      HTML::FormFu::Element::Repeatable into individual constraints

0.09009 2012-09-29
    - Make sure object can('checked') before calling checked() (colinnewell)