@@ -1,6 +1,5 @@
 [% IF self.container_tag.defined %]<[% self.container_tag %][% process_attrs(self.container_attributes) %]>[% END %][% IF self.label.defined && self.label_tag == 'legend' %]
-[% INCLUDE $self.label_filename %][% END %][% IF self.errors %][% FOREACH error = self.errors %]
-<span class="error_message [% error.class %]"[% IF error.for.defined %][% process_attrs({for=>error.for}) %][% END %]>[% error.message %]</span>[% END %][% END %][% IF self.label.defined && self.label_tag != 'legend' && !self.reverse_single %]
+[% INCLUDE $self.label_filename %][% END %][% INCLUDE $self.errors_filename %][% IF self.label.defined && self.label_tag != 'legend' && !self.reverse_single %]
 [% INCLUDE $self.label_filename %][% END %][% IF self.container_tag.defined %]
 [% END %][% content %][% IF self.label.defined && self.label_tag != 'legend' && self.reverse_single %]
 [% INCLUDE $self.label_filename %][% END %][% IF self.comment.defined %]
